--- a/css/768px/index.css
+++ b/css/768px/index.css
@@ -1,3 +1,4 @@
+/* If screen reaches 768px */
 @media screen and (max-width: 768px) {
     .nav-links {
         display: none; /* Hide the navigation links on smaller screens */
@@ -59,8 +60,15 @@
         transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; /* Smooth transition for button */
         background-color: rgba(255, 255, 255, 0); /* Transparent background */
     }
+
+    .carde-one,
+    .carde-two {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
+/* If screen reaches 600px */
 @media screen and (max-width: 600px) { 
     .headline {
         font-size: x-large;
