--- a/css/768px/index.css
+++ b/css/768px/index.css
@@ -91,5 +91,10 @@
         transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; /* Smooth transition for button */
         background-color: rgba(255, 255, 255, 0); /* Transparent background */
     }
+
+    .thirdy-two {
+        color: white;
+        font-size: small;
+    }
 }
 
