--- a/css/index.css
+++ b/css/index.css
@@ -356,7 +356,6 @@ html, body {
     padding: 10px;
     padding-left: 10%;
     padding-right: 10%;
-    text-align: center;
 }
 
 .third-pic {
@@ -432,16 +431,43 @@ html, body {
     font-family: 'poppins-extralight';
     position: relative;
     margin-top: 10px;
-    height: 600px;
+    height: auto;
     background-color: transparent; /* Example background color */
     width: 100%; /* Cover the entire width of the screen */
     overflow: hidden;
 }
 
-/* Third content styles */
+/* Fourth content styles */
 .fourth-content {
-    padding: 10px;
-    padding-left: 10%;
-    padding-right: 10%;
-    text-align: center;
+    padding-top: 10px;
+}
+
+.fourth-content h2{
+    text-align: left;
+    padding-left: 5%;
+}
+
+.photocards-container {
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 20px 0;
+    scroll-behavior: smooth; /* Smooth scrolling behavior */
+    scrollbar-width: none; /* Hide scrollbar in Firefox */
+    -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
+}
+
+.photocards-container ::-webkit-scrollbar {
+    display: none; /* Hide scrollbar in Chrome, Safari, and Opera */
+}
+
+.cards {
+    display: inline-block;
+    width: 250px;
+    height: 400px;
+    background-color: #ffffff;
+    border-radius: 25px;
+    margin: 10px;
+    transition: transform 0.5s ease;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
 }
