--- a/css/768px/index.css
+++ b/css/768px/index.css
@@ -66,6 +66,12 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .thirdy-one {
+        color: white;
+        text-align: left;
+        font-size: xx-large;  
+    }
 }
 
 /* If screen reaches 600px */
