--- a/css/index.css
+++ b/css/index.css
@@ -539,8 +539,21 @@ html, body {
 
 .fifth-brands {
     width: 100%;
-    height: 200px;
+    height: 300px;
     text-align: center;
     position: absolute;
     bottom: 0;
+}
+
+.company {
+    height: 100px;
+    width: auto;
+}
+
+.branded {
+    height: 100px;
+    width: 100px;
+    background-color: #000000;
+    margin: 10px;
+    display: inline-block;
 }
