--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,53 +1,76 @@
 
 .feedback-main{
-    margin: 80px;
+    margin-top: 80px;
+    margin-right: 650px;
+    margin-left: 50px;
     font-family: 'poppins-light';
+}
+
+.image1 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: auto;
+    height: 80%;
+    margin-left: 100px;
+    max-height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+}
+
+.headline .letter1,
+.headline .letter2,
+.headline .letter3,
+.headline .letter4,
+.headline .letter5,
+.headline .letter6,
+.headline .letter7,
+.headline .letter8,
+.headline .letter9,
+.headline .letter10,
+.headline .letter11 {
+        font-family: 'poppins-bold';
+}
+    
+.headline .letter1 { color: #F89423; }
+.headline .letter2 { color: #F04A32; }
+.headline .letter3 { color: #12959B; }
+.headline .letter4 { color: #207688; }
+.headline .letter5 { color: #8C4C89; }
+.headline .letter6 { color: #F04A32; }
+.headline .letter7 { color: #F89423; }
+.headline .letter8 { color: #8C4C89; }
+.headline .letter9 { color: #F04A32; }
+.headline .letter10 { color: #12959B; }
+.headline .letter11 { color: #12959B; }
+.headline .other { font-family: 'poppins-extralight'; }
+    
+.headline {
+    font-size: 18px;
+}
+  
+.reviews-container {
+    display: flex;
+    background-color: #c3c9c9;
+    
+}
+.reviews-container >div {
+    margin: 20px;
+    padding: 20px;
+    background-color: #fdfdfd;
+    height: 300px;
+    width: 200px;   
+    margin-bottom: 50px;
+    margin-top: 50px;
+    padding-bottom: 10px;
+    font-family: 'poppins-light';
+    border-radius: 20px;
+
+}
+.reviews{
+    position:relative;
+    text-align: center;
     
 
 }
-.feedback-form {
-    margin: 80px;
-    margin-bottom: 50px;
-}
+
   
-textarea {
-    width: 100%;
-    height: 100px;
-    margin-bottom: 20px;
-}
-  
-button {
-    position: absolute; /* Set position to absolute */
-    bottom: 80px; /* Distance from the bottom */
-    left: 80px; /* Distance from the left */
-    font-family: 'poppins-reg';
-    font-size: medium;
-    padding: 5px 10px; /* Adjust button padding */
-    color: #303030; /* Button text color */
-    border: 3px solid #303030; /* Border style, color, and width */
-    border-radius: 100px; /* Apply border radius */
-    cursor: pointer; /* Change cursor to pointer on hover */
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; /* Smooth transition for button */
-    background-color: rgba(255, 255, 255, 0); /* Transparent background */
-    size: 10px;
-}
-  
-  button:hover {
-    background-color: #303030; /* Button background color on hover */
-    color: white;
-}
-  
-.reviews {
-    border-top: 1px solid #ccc;
-    padding-top: 20px;
-}
-  
-.review-item {
-    margin-bottom: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #ccc;
-}
-  
-.review-item p {
-    margin: 0;
-}
