--- a/css/index.css
+++ b/css/index.css
@@ -482,7 +482,7 @@ html, body {
 .fifth {
     font-family: 'poppins-extralight';
     position: relative;
-    height: 1000px;
+    height: 700px;
     background-color: transparent; /* Example background color */
     width: 100%; /* Cover the entire width of the screen */
     overflow: hidden;
@@ -518,12 +518,12 @@ html, body {
 }
 
 .fifth-image {
-    position: absolute;
+     position: absolute;
     top: 0;
     right: 0;
-    width: 500px;
-    height: 500px;
-    max-height: 100%;
+    width: 50%; /* Adjust this percentage as needed */
+    max-width: 500px; /* Add a maximum width to maintain image quality on larger screens */
+    height: auto; /* Allow the height to adjust proportionally */
     object-fit: cover;
 }
 
@@ -539,21 +539,150 @@ html, body {
 
 .fifth-brands {
     width: 100%;
-    height: 300px;
+    height: auto;
     text-align: center;
     position: absolute;
     bottom: 0;
 }
 
+.fifth-h2 {
+    top: 40px;
+}
+
 .company {
     height: 100px;
     width: auto;
+    overflow: hidden;
+    position: relative;
+}
+
+.company-one,
+.company-two {
+    display: flex;
+    position: absolute;
+    animation: moveLeft 20s linear infinite; 
+    top: 0;
+    width: auto;
+}
+
+.company-two {
+    left: 100%;
+    animation: moveLeft 20s linear infinite;
+}
+
+@keyframes moveLeft {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%); /* Move the content off-screen to the left */
+    }
 }
 
 .branded {
     height: 100px;
-    width: 100px;
-    background-color: #000000;
+    width: 100%; 
     margin: 10px;
     display: inline-block;
+    position: relative;
+    bottom: 30px;
+}
+
+.branded img {
+    width: 45px; /* Ensure the image doesn't overflow its container */
+    height: 45px; 
+    position: absolute;
+    top: 50%; /* Position the top of the image at the vertical center */
+    left: 0%;
+    transform: translateY(-50%); /* Translate the image up by 50% of its own height */
+}
+
+.fifth-branded {
+    width: 100%; /* Adjusted */
+    height: auto; /* Adjusted */
+    object-fit: contain; 
+}
+
+.branded h2 {
+    font-size: 100%;
+    position: absolute;
+    left: 55px;
+    top: 10px;
+    text-align: left;
+}
+
+/* Sixth section styles */
+.sixth {
+    font-family: 'poppins-extralight';
+    position: relative;
+    height: auto;
+    background-color: transparent; /* Example background color */
+    width: 100%; /* Cover the entire width of the screen */
+    overflow: hidden;
+}
+
+/* Sixth content styles */
+.sixth-content {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: justify;
+}
+
+/* Footer section styles */
+.footer {
+    font-family: 'poppins-extralight';
+    height: 250px;
+    background-color: #1E1E1E; /* Example background color */
+    width: 100%; /* Cover the entire width of the screen */
+    overflow: hidden;
+}
+
+/* Footer content styles */
+.footer-content {
+    padding: 20px;
+    text-align: justify;
+}
+
+.footer img {
+    height: 50px;
+    width: auto; 
+}
+
+.footer-logo {
+    width: 100%; /* Adjusted */
+    height: auto; /* Adjusted */
+    object-fit: contain; 
+}
+
+.soc-links a,
+.soc-contacts a {
+    color: white;
+    text-decoration: none;
+    display: block; /* Change display to block */
+}
+
+.soc-links,
+.soc-contacts {
+    display: flex; /* Use flexbox for inner containers */
+    flex-direction: column; /* Arrange items vertically */
+    align-items: flex-start; /* Align items to the start */
+    font-family: 'poppins-reg';
+    font-size: small;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.row {
+    display: flex; /* Use flexbox for inner containers */
+    flex-direction: row; /* Arrange items vertically */
+    width: 100%;
+}
+
+.patent {
+    font-size: x-small;
+    color: white;
+    display: flex;
+    justify-content: center;
 }
