--- a/css/products.css
+++ b/css/products.css
@@ -158,93 +158,47 @@ html, body {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
 }
 
-/* Hero section styles */
-.hero {
-    font-family: 'poppins-reg';
+.first {
     position: relative;
-    background-color: #F2F2F2; /* Example background color */
-    height: 450px; /* Adjust height to fit the viewport height */
-    width: 100%; /* Cover the entire width of the screen */
-    overflow: hidden; /* Ensure the image doesn't overflow the hero section */
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); /* Add shadow */
+    height: auto;
+    background-color: transparent;
+    width: 100%;
+    overflow: hidden;
+    font-family: 'poppins-light';
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* Hero content styles */
-.hero-content {
-    padding: 50px;
-    text-align: left;
-    margin-top: 40px;
-}
-
-/* Hero image styles */
-.hero-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: auto;
-    height: 100%;
-    max-height: 100%;
-    object-fit: cover; /* Maintain aspect ratio and cover the entire container */
-}
-
-.headline .letter1,
-.headline .letter2,
-.headline .letter3,
-.headline .letter4,
-.headline .letter5,
-.headline .letter6,
-.headline .letter7,
-.headline .letter8,
-.headline .letter9,
-.headline .letter10,
-.headline .letter11 {
-    font-family: 'poppins-bold';
-}
-
-.headline .letter1 { color: #F89423; }
-.headline .letter2 { color: #F04A32; }
-.headline .letter3 { color: #12959B; }
-.headline .letter4 { color: #207688; }
-.headline .letter5 { color: #8C4C89; }
-.headline .letter6 { color: #F04A32; }
-.headline .letter7 { color: #F89423; }
-.headline .letter8 { color: #8C4C89; }
-.headline .letter9 { color: #F04A32; }
-.headline .letter10 { color: #12959B; }
-.headline .letter11 { color: #12959B; }
-.headline .other { font-family: 'poppins-extralight'; }
-
-.headline {
-    font-size: 50px;
-}
-
-/* Second section styles */
-.second {
-    font-family: 'poppins-extralight';
-    position: relative;
-    margin-top: 10px;
-    background-color: transparent; /* Example background color */
-    width: 100%; /* Cover the entire width of the screen */
-    overflow: hidden; /* Ensure the image doesn't overflow the hero section */
-}
-
-/* Second content styles */
-.second-content {
-    padding: 10px;
-    padding-left: 10%;
-    padding-right: 10%;
+.first-one {
+    margin-top: 65px;
     text-align: center;
+    z-index: 1000;
 }
 
-/* First content inside second */
+.first-one a {
+    font-size: small;
+    color: black;
+    margin-right: 10px;
+    text-decoration: none;
+}
+
+.first-two {
+    background-color: #F2F2F2;
+    margin-top: -10px;
+    width: 100%;
+    height: 500px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
+}
+
 .content-one {
     display: flex;
     justify-content: center;
+    margin-top: -10px;
 }
 
 .card {
-    margin: 10px auto; /* Horizontally center the card */
+    margin: 0px auto; /* Horizontally center the card */
     padding: 10px;
+    padding-top: 0px;
     background-color: transparent;
     width: 50%;
     display: flex;
@@ -270,346 +224,60 @@ html, body {
     text-align: justify;
 }
 
-/* Second content inside second */
-.content-two {
-    width: auto; /* Adjusted */
+.features h2 {
+   padding-top: 20px;
+   padding-left: 30px;
+   font-weight: 300;
+   font-size: x-large;
 }
 
-.wevalueyou {
-    text-align: left;
-    margin-top: 0;
+.photolinks a.active {
+    color: #000000; /* Change color for active link */
+    font-family: 'poppins-semibold'; /* Change font family for active link */
 }
 
-.wevalueyou .one {
-    font-family: 'poppins-extralight';
-}
 
-.wevalueyou .two {
-    font-family: 'poppins-bold';
-}
 
-.third-p {
-    margin-top: 0;
-    font-size: small;
-    text-align: justify;
-}
 
-.carde {
-    margin: 10px; /* Horizontally center the card */
-    padding: 10px;
-    height: 100px;
-    width: 100%;
-    display: flex;
-    align-items: center; /* Vertically center the content */
-}
 
-.carde img {
-    height: 100px;
-    width: 100px; 
-    margin-right: 10px; /* Add some space between image and text */
-}
 
-.carde-one, 
-.carde-two {
-    display: flex;
-}
 
-.third-image {
-    width: 100%; /* Adjusted */
-    height: auto; /* Adjusted */
-    object-fit: contain; 
-}
 
-.carde h2,
-.carde p {
-    margin: 0; /* Remove default margins */
-}
 
-.third-h2 {
-    font-family: 'poppins-light';
-    font-size: 20px;
-}
 
-.third-p2 {
-    font-family: 'poppins-extralight';
-    font-size: 13px;
-}
 
-.second-en {
-    flex-direction: column; 
-    text-align: left;
-}
 
-/* Third section styles */
-.third {
-    font-family: 'poppins-extralight';
-    position: relative;
-    margin-top: 10px;
-    height: 600px;
-    background-color: #477D63; /* Example background color */
-    width: 100%; /* Cover the entire width of the screen */
-    overflow: hidden;
-    box-shadow: 20px 0px 20px rgba(0, 0, 0, 0.3); /* Add shadow */
-    z-index: 1; /* Ensure it's above other content */
-}
 
-/* Third content styles */
-.third-content {
-    padding: 10px;
-    padding-left: 10%;
-    padding-right: 10%;
-}
 
-.third-pic {
-    position: absolute; /* Position absolute to be able to use right */
-    top: 65px;
-    bottom: 65px;
-    left: 70%;
-    height: 450px;
-    width: 450px;
-    object-fit: cover;
 
-}
 
-.third-content img {
-    max-width: 100%; /* Ensure the image doesn't overflow its container */
-    height: auto; 
-    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.3); /* Add shadow */
-}
 
-.thirdy {
-    position: absolute;
-    right: 40%;
-    left: 40px;
-    top: 65px;
-    height: 500px;
-}
 
-.thirdy button {
-    display: flex;
-    left: 0px;
-}
 
-.thirdy-one {
-    color: white;
-    text-align: left;  
-    font-size: 50px;
-}
 
-.t1 {
-    font-family: 'poppins-extralight';
-}
 
-.t2 {
-    font-family: 'poppins-light';
-}
 
-.thirdy-two {
-    color: white;
-    text-align: justify;
 
-}
 
-.btn_third {
-    position: absolute; /* Set position to absolute */
-    bottom: 50px; /* Distance from the bottom */
-    left: 50px; /* Distance from the left */
-    font-family: 'poppins-reg';
-    font-size: medium;
-    padding: 15px 30px; /* Adjust button padding */
-    border: 0px solid; /* Border style, color, and width */
-    border-radius: 100px; /* Apply border radius */
-    cursor: pointer; /* Change cursor to pointer on hover */
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; /* Smooth transition for button */
-    background-color: rgb(255, 255, 255); /* Transparent background */
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
-}
 
-.btn_third:hover {
-    background-color: #303030; /* Button background color on hover */
-    color: white;
-}
 
-/* Fourth section styles */
-.fourth {
-    font-family: 'poppins-extralight';
-    position: relative;
-    height: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #F2F2F2; /* Example background color */
-    width: 100%; /* Cover the entire width of the screen */
-    overflow: hidden;
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
-}
 
-/* Fourth content styles */
-.fourth-content {
-    padding-top: 10px;
-}
 
-.fourth-content h2{
-    text-align: left;
-    padding-left: 5%;
-}
 
-.photocards-container {
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-    padding: 20px 0;
-    scroll-behavior: smooth; /* Smooth scrolling behavior */
-    scrollbar-width: none; /* Hide scrollbar in Firefox */
-    -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
-}
 
-.photocards-container ::-webkit-scrollbar {
-    display: none; /* Hide scrollbar in Chrome, Safari, and Opera */
-}
 
-.cards {
-    display: inline-block;
-    width: 250px;
-    height: 400px;
-    background-color: #ffffff;
-    border-radius: 25px;
-    margin: 10px;
-    transition: transform 0.5s ease;
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
-}
 
-/* Fifth section styles */
-.fifth {
-    font-family: 'poppins-extralight';
-    position: relative;
-    height: 700px;
-    background-color: transparent; /* Example background color */
-    width: 100%; /* Cover the entire width of the screen */
-    overflow: hidden;
-}
 
-/* Fifth content styles */
-.fifth-content {
-    padding: 0px;
-}
 
-.headline-fifth .letter1 { color: #F89423; }
-.headline-fifth .letter2 { color: #F04A32; }
-.headline-fifth .letter3 { color: #12959B; }
-.headline-fifth .letter4 { color: #207688; }
-.headline-fifth .letter5 { color: #8C4C89; }
-.headline-fifth .letter6 { color: #F04A32; }
-.headline-fifth .letter7 { color: #F89423; }
-.headline-fifth .letter8 { color: #8C4C89; }
-.headline-fifth .letter9 { color: #F04A32; }
-.headline-fifth .letter10 { color: #12959B; }
 
-.headline-fifth .letter11 {
-    font-family: 'poppins-extralight';
-    font-size: 13px;
-    position: absolute;
-    top:  75px;
-    left: 390px;
-}
 
-.headline-fifth {
-    font-size: 65px;
-    font-family: 'poppins-bold';
-}
 
-.fifth-image {
-     position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%; /* Adjust this percentage as needed */
-    max-width: 500px; /* Add a maximum width to maintain image quality on larger screens */
-    height: auto; /* Allow the height to adjust proportionally */
-    object-fit: cover;
-}
 
-.fifth-p {
-    text-align: justify;
-}
 
-.fifth-text {
-    position: absolute;
-    right: 50%;
-    left: 40px;
-}
 
-.fifth-brands {
-    width: 100%;
-    height: auto;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-}
 
-.fifth-h2 {
-    top: 40px;
-}
 
-.company {
-    height: 100px;
-    width: auto;
-    overflow: hidden;
-    position: relative;
-}
 
-.company-one,
-.company-two {
-    display: flex;
-    position: absolute;
-    animation: moveLeft 20s linear infinite; 
-    top: 0;
-    width: auto;
-}
-
-.company-two {
-    left: 100%;
-    animation: moveLeft 20s linear infinite;
-}
-
-@keyframes moveLeft {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-100%); /* Move the content off-screen to the left */
-    }
-}
-
-.branded {
-    height: 100px;
-    width: 100%; 
-    margin: 10px;
-    display: inline-block;
-    position: relative;
-    bottom: 30px;
-}
-
-.branded img {
-    width: 45px; /* Ensure the image doesn't overflow its container */
-    height: 45px; 
-    position: absolute;
-    top: 50%; /* Position the top of the image at the vertical center */
-    left: 0%;
-    transform: translateY(-50%); /* Translate the image up by 50% of its own height */
-}
-
-.fifth-branded {
-    width: 100%; /* Adjusted */
-    height: auto; /* Adjusted */
-    object-fit: contain; 
-}
-
-.branded h2 {
-    font-size: 100%;
-    position: absolute;
-    left: 55px;
-    top: 10px;
-    text-align: left;
-}
 
 /* Sixth section styles */
 .sixth {
