--- a/css/products.css
+++ b/css/products.css
@@ -183,9 +183,9 @@ html, body {
 
 .first-two {
     background-color: #F2F2F2;
-    margin-top: -10px;
+    margin-top: 10px;
     width: 100%;
-    height: 500px;
+    height: auto;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
 }
 
@@ -224,8 +224,8 @@ html, body {
     text-align: justify;
 }
 
-.features h2 {
-   padding-top: 20px;
+.new-h2 {
+   padding-top: 0px;
    padding-left: 30px;
    font-weight: 300;
    font-size: x-large;
@@ -236,7 +236,153 @@ html, body {
     font-family: 'poppins-semibold'; /* Change font family for active link */
 }
 
+.prod-h2 {
+    font-weight: 300;
+    margin-top: -10px;
+    padding-left: 30px;
+    font-size: x-large;
+}
+.prod-h2-c {
+    font-weight: 300;
+    padding-left: 30px;
+    font-size: x-large;
+}
 
+.photocards-d {
+    display: flex;
+    flex-direction: row; /* Change to row layout */
+    flex-wrap: wrap; /* Allow flex items to wrap to the next line */
+    justify-content: center; /* Center align the cards */
+    padding-bottom: 25px;
+}
+
+.cards-d {
+    min-width: 250px;
+    min-height: 400px;
+    background-color: #ffffff;
+    border-radius: 25px;
+    margin: 10px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
+}
+
+.cards-d-p {
+    min-width: 250px;
+    min-height: 400px;
+    background-color: #fffbea;
+    border-radius: 25px;
+    margin: 10px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
+}
+
+.cards-d-l {
+    min-width: 250px;
+    min-height: 400px;
+    background-color: #eaf5ff;
+    border-radius: 25px;
+    margin: 10px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
+}
+
+.cards-d-b {
+    min-width: 250px;
+    min-height: 400px;
+    background-color: #ffeaea;
+    border-radius: 25px;
+    margin: 10px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3); /* Add shadow */
+}
+
+/* Add transition for opacity and height */
+.features-products-d,
+.all-products-d,
+.photo-products-d,
+.labels-products-d,
+.business-products-d {
+    transition: opacity 0.3s ease-in-out, height 0.3s ease-in-out;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+}
+
+/* Show the element when its opacity is 1 */
+.features-products-d.show,
+.all-products-d.show,
+.photo-products-d.show,
+.labels-products-d.show,
+.business-products-d.show {
+    opacity: 1;
+    height: auto;
+}
+
+.photolinks a.active {
+    font-weight: bold;
+}
+
+.photolinks a {
+    transition: font-weight 0.3s ease-in-out; /* Smooth transition for font weight */
+}
+
+/* Second section styles */
+.second {
+    font-family: 'poppins-extralight';
+    position: relative;
+    margin-top: 10px;
+    background-color: transparent; /* Example background color */
+    width: 100%; /* Cover the entire width of the screen */
+    overflow: hidden; /* Ensure the image doesn't overflow the hero section */
+}
+
+.third-p {
+    margin-top: 0;
+    font-size: small;
+    text-align: justify;
+}
+
+.carde {
+    margin: 10px; /* Horizontally center the card */
+    padding: 10px;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center; /* Vertically center the content */
+}
+
+.carde img {
+    height: 100px;
+    width: 100px; 
+    margin-right: 10px; /* Add some space between image and text */
+}
+
+.carde-one, 
+.carde-two {
+    display: flex;
+}
+
+.third-image {
+    width: 100%; /* Adjusted */
+    height: auto; /* Adjusted */
+    object-fit: contain; 
+}
+
+.carde h2,
+.carde p {
+    margin: 0; /* Remove default margins */
+}
+
+.third-h2 {
+    font-family: 'poppins-light';
+    font-size: 20px;
+}
+
+.third-p2 {
+    font-family: 'poppins-extralight';
+    font-size: 13px;
+}
+
+.second-en {
+    flex-direction: column; 
+    text-align: left;
+}
 
 
 
