--- a/css/photocard.css
+++ b/css/photocard.css
@@ -244,6 +244,114 @@ html, body {
     padding-left: 20px;
 }
 
+.brand-details {
+    position: absolute;
+    right: 0%;
+    background-color: #FAFAFA;
+    height:100%;
+    width: 230px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.info-one {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: auto;
+    padding-left: 10px;
+    width: auto;
+    border-bottom: 1px solid #f2f2f2;
+}
+
+.info-one h1 {
+    font-size: small;
+    position: absolute;
+    left: 10px;
+}
+
+.info-one ul {
+    font-size: 10px;
+    padding-top: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    list-style-type: none; /* Remove default bullets */
+}
+
+.info-one ul li {
+    position: relative;
+    padding-left: 20px; /* Add padding for the checkmark */
+}
+
+.del::before {
+    content: '\2713'; /* Unicode character for checkmark */
+    position: absolute;
+    left: 0px;
+}
+
+.led::before {
+    content: '\2022'; /* Unicode character for bullet */
+    position: absolute;
+    left: 0px;
+}
+
+.text {
+    display: flex;
+    align-items: flex-start;
+    width: max-content;
+}
+
+.info-two {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.photodisplay {
+    margin-left: 20px;
+    height: auto;
+    width: 410px;
+}
+
+.main {
+    height: 300px;
+    width: 100%;
+    overflow: hidden; /* Ensure the image doesn't overflow the container */
+    margin: 0 auto; /* Horizontally center the container */
+}
+
+.main img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the container */
+}
+
+.slides {
+    position: relative;
+    margin-top: 10px;
+    height: auto; /* Adjust the height as per your design */
+    width: 100%;
+    white-space: nowrap; /* Ensure all thumbnails stay on the same line */
+    overflow-x: auto; /* Enable horizontal scrolling */
+    scrollbar-width: none; /* Hide scrollbar in Firefox */
+    -ms-overflow-style: none; /* Hide scrollbar in Internet Explorer and Edge */
+}
+
+.slides::-webkit-scrollbar {
+    display: none; /* Hide scrollbar in WebKit browsers */
+}
+
+.thumbnail {
+    cursor: pointer;
+    margin-right: 5px; /* Add some space between thumbnails */
+    height: 110px; /* Ensure thumbnails take full height of the container */
+    object-fit: cover; /* Ensure thumbnails cover the container */
+}
+
+
+
 
 
 
