--- a/css/768px/photocard.css
+++ b/css/768px/photocard.css
@@ -104,3 +104,125 @@
     }
 }
 
+/* If screen reaches 600px */
+@media screen and (max-width: 600px) { 
+    .headline {
+        font-size: x-large;
+    }
+
+    .hero-content {
+        padding: 25px;
+        text-align: left;
+        margin-top: 35px;
+    }
+
+    .btn_order {
+        font-family: 'poppins-reg';
+        font-size: small;
+        padding: 10px 20px; /* Adjust button padding */
+        color: #303030; /* Button text color */
+        border: 3px solid #303030; /* Border style, color, and width */
+        border-radius: 100px; /* Apply border radius */
+        cursor: pointer; /* Change cursor to pointer on hover */
+        transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; /* Smooth transition for button */
+        background-color: rgba(255, 255, 255, 0); /* Transparent background */
+    }
+
+    .thirdy-two {
+        color: white;
+        font-size: small;
+    }
+}
+
+/* If screen reaches 1000px */
+@media screen and (max-width: 1100px) {
+    .brand-two {
+        display: flex;
+        flex-direction: column;
+        background-color: #F2F2F2;
+        margin-top: 10px;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+    }
+    
+    .brand-details {
+        position: relative;
+        bottom: 0%;
+        background-color: #FAFAFA;
+        height: auto;
+        width: 100%;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    }
+    
+    .info-one {
+        display: flex;
+        flex-direction: column;
+        background-color: transparent;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        height: auto;
+        padding-left: 10px;
+        width: auto;
+        border-bottom: 1px solid #f2f2f2;
+    }
+    
+    .info-two {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .photodisplay {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        height: auto;
+        width: auto;
+    }
+
+    .cart {
+        position: relative; /* Set position to absolute */
+        bottom: 10px; /* Distance from bottom */
+        font-family: 'poppins-reg';
+        padding: 7px 13px; /* Adjust button padding */
+        background-color: #303030; /* Button background color */
+        color: white; /* Button text color */
+        border: none; /* Remove button border */
+        border-radius: 100px; /* Apply border radius */
+        cursor: pointer; /* Change cursor to pointer on hover */
+        transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; /* Smooth transition for button */
+    }
+
+    .card-info {
+        position: relative;
+        margin-left: 20px;
+        height: 90%;
+        width: 90%;
+    }
+
+    .main {
+        height: 80%;
+        width: 80%;
+        overflow: hidden; /* Ensure the image doesn't overflow the container */
+        margin: 0 auto; /* Horizontally center the container */
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+    }
+    
+    .slides {
+        position: relative;
+        margin-top: 10px;
+        height: auto; /* Adjust the height as per your design */
+        width: 80%;
+        white-space: nowrap; /* Ensure all thumbnails stay on the same line */
+        overflow-x: auto; /* Enable horizontal scrolling */
+        scrollbar-width: none; /* Hide scrollbar in Firefox */
+        -ms-overflow-style: none; /* Hide scrollbar in Internet Explorer and Edge */
+    }
+}
+
