--- a/css/shipping.css
+++ b/css/shipping.css
@@ -44,8 +44,8 @@
     padding: 20px;
     background-color: #fdfbfb;
     border: solid rgb(133, 130, 130);
-    height: 40px;
-    width: 80px;   
+    height: 60px;
+    width: 100px;   
     margin-bottom: 60px;
     margin-left: 80px;
     margin-top: 0px;
@@ -69,11 +69,58 @@ span.item-name{
 .input-info {
 
     background-color:rgb(216, 208, 208);
-    height: 400px;
+    height: auto;
     width: auto;  
     margin-bottom: 50px;
     margin-top: 50px;
     font-family: 'poppins-light';
 }
+
+input[type=text], [type=email],[type=number], select {
+    width: 30%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 0px;
+    margin-bottom: 16px;
+    margin-left: 40px;
+    resize: vertical;
+  }
+
+  label{
+    width: 0%;
+    padding: 12px;
+    border: 0px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 0px;
+    margin-bottom: 16px;
+    margin-left: 40px;
+    resize: vertical;
+    
+  }
+  
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    margin-left: 40px;
+    margin-bottom: 40px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+
+  .col{
+    margin-top: 6px;
+    margin-left: 100px;
+  }
+  
+ 
 
 
